@@ -1,3 +1,4 @@
+- added menu button (2024/06/22 MS)
 - allow right mouse button to restart game (2024/06/22 MS)
 
 2.3:
